# PackageManager

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: CommonUtils.cmake
include/: ByteBuffer.hpp  CreatePackageRequest.hpp  FileMetadata.hpp  MessageCreator.hpp  MessageTypes.hpp  ReadByteBuffer.hpp  RequestHeader.hpp  SerializationHelper.hpp  WriteByteBuffer.hpp
include/Misc/: CreatePackageRequest.hpp  DirectoryHelper.hpp  FileMetadata.hpp  MessageCreator.hpp  MessageTypes.hpp  RequestHeader.hpp
include/NetworkSimulation/: FakeNetwork.hpp  NetworkDevice.hpp  Packet.hpp  Router.hpp  TestDataSocket.hpp
include/Networking/: DataSocketInterface.hpp  IPv4Address.hpp  ListeningSocketInterface.hpp  NetworkDataSocket.hpp  NetworkListeningSocket.hpp  SocketInterfaces.hpp  SocketOptions.hpp  Utilities.hpp
include/NetworkingV2/: BaseSocketInterface.hpp  SocketBase.hpp
include/Serialization/: SerializationHelper.hpp
include/Strings/: Utilities.hpp
include/Utility/: Logger.hpp
src/: ByteBuffer.cpp  CreatePackageRequest.cpp  FileMetadata.cpp  GenerateMessageFile.cpp  MessageCreator.cpp  ReadByteBuffer.cpp  RequestHeader.cpp  SerializationHelper.cpp  WriteByteBuffer.cpp
src/Misc/: CreatePackageRequest.cpp  DirectoryHelper.cpp  FileMetadata.cpp  GenerateMessageFile.cpp  ReadByteBuffer.cpp  RequestHeader.cpp  WriteByteBuffer.cpp
src/NetworkSimulation/: FakeNetwork.cpp  NetworkDevice.cpp  Packet.cpp
src/Networking/: IPv4Address.cpp  NetworkDataSocket.cpp  NetworkListeningSocket.cpp  SocketOptions.cpp  Utilities.cpp
src/NetworkingV2/: SocketBase.cpp
src/Serialization/: SerializationHelper.cpp
src/Strings/: Utilities.cpp
src/Utility/: Logger.cpp
test/: ByteBufferTest.cpp  CreatePackageRequestTest.cpp  MainServerTest.cpp  SerializationHelperTest.cpp  Test.cpp
test/Networking/: IPv4AddressTest.cpp  UtilitiesTest.cpp
test/NetworkingV2/: BaseSocketInterfaceTest.cpp
test/Serialization/: ReadByteBufferTest.cpp  SerializationHelperTest.cpp  WriteByteBufferTest.cpp
test/Strings/: UtilitiesTest.cpp
test/TodoReworkFolder/: ClientSocketTest.cpp  MainTest.cpp  Packet.cpp  Packet.hpp  Router.cpp  Router.hpp  ServerSocketTest.cpp  TestDataSocket.cpp  TestDataSocket.hpp
